PLAYWRIGHT_JS_TESTS/cmd_log.txt
PS C:\Users\16san\tests> npx playwright test login_test.spec.js      

Running 5 tests using 1 worker

  ✓  1 login_test.spec.js:16:1 › Login demo test 1 (6.2s)
  ✓  2 login_test.spec.js:39:1 › Login demo test 2 (10.2s)
  ✘  3 login_test.spec.js:62:1 › Login demo test 3 (10.7s)
  ✘  4 login_test.spec.js:85:1 › Login demo test 4 (9.2s)
  ✘  5 login_test.spec.js:108:1 › Login demo test 5 (16.2s)


  1) login_test.spec.js:62:1 › Login demo test 3 ───────────────────────────────────────────────────

    Error: Timed out 5000ms waiting for expect(locator).toBeVisible()

    Locator: getByLabel('Open user account menu')
    Expected: visible
    Received: hidden
    Call log:
      - expect.toBeVisible with timeout 5000ms
      - waiting for getByLabel('Open user account menu')


      70 |       await page.getByRole('button', { name: 'Sign in', exact: true }).click({timeout: 10000});
      71 |
    > 72 |       await expect(page.getByLabel('Open user account menu')).toBeVisible();
         |                                                               ^
      73 |
      74 |       // Log the test result
      75 |       logger.info('Login demo test 3 passed', { test: 'Login demo test 3' });

        at C:\Users\16san\tests\login_test.spec.js:72:63

  2) login_test.spec.js:85:1 › Login demo test 4 ───────────────────────────────────────────────────

    Error: Timed out 5000ms waiting for expect(locator).toBeVisible()

    Locator: getByLabel('Open user account menu')
    Expected: visible
    Received: hidden
    Call log:
      - expect.toBeVisible with timeout 5000ms
      - waiting for getByLabel('Open user account menu')


      93 |       await page.getByRole('button', { name: 'Sign in', exact: true }).click({timeout: 10000});
      94 |
    > 95 |       await expect(page.getByLabel('Open user account menu')).toBeVisible();
         |                                                               ^
      96 |
      97 |       // Log the test result
      98 |       logger.info('Login demo test 4 passed', { test: 'Login demo test 4' });

        at C:\Users\16san\tests\login_test.spec.js:95:63

  3) login_test.spec.js:108:1 › Login demo test 5 ──────────────────────────────────────────────────

    Error: Timed out 5000ms waiting for expect(locator).toBeVisible()

    Locator: getByLabel('Open user account menu')
    Expected: visible
    Received: hidden
    Call log:
      - expect.toBeVisible with timeout 5000ms
      - waiting for getByLabel('Open user account menu')


      116 |       await page.getByRole('button', { name: 'Sign in', exact: true }).click({timeout: 10000});
      117 |
    > 118 |       await expect(page.getByLabel('Open user account menu')).toBeVisible();
          |                                                               ^
      119 |
      120 |       // Log the test result
      121 |       logger.info('Login demo test 5 passed', { test: 'Login demo test 5' });

        at C:\Users\16san\tests\login_test.spec.js:118:63

  Slow test file: login_test.spec.js (52.5s)
  Consider splitting slow test files to speed up parallel execution
  3 failed
    login_test.spec.js:62:1 › Login demo test 3 ────────────────────────────────────────────────────
    login_test.spec.js:85:1 › Login demo test 4 ────────────────────────────────────────────────────
    login_test.spec.js:108:1 › Login demo test 5 ───────────────────────────────────────────────────
  2 passed (55.0s)
PS C:\Users\16san\tests> npx playwright test create_repo_test.spec.js

Running 3 tests using 1 worker

  ✓  1 create_repo_test.spec.js:23:1 › Create repo test 1 (11.8s)                                                                                                             
2023-10-29T17:08:55.817Z info: Repository 'github-automation-p980' created successfully. [Login demo test 1] (C:\Users\16san\tests\tests)
2023-10-29T17:08:55.819Z info: Create repo test 1 passed [Create repo test 1] (C:\Users\16san\tests\tests)
  ✓  2 create_repo_test.spec.js:51:1 › Create repo test 2 (16.1s)                                                                                                             
2023-10-29T17:09:11.910Z info: Repository 'github-automation-p981' created successfully. [Login demo test 1] (C:\Users\16san\tests\tests)
2023-10-29T17:09:11.910Z info: Create repo test 2 passed [Create repo test 2] (C:\Users\16san\tests\tests)
  ✘  3 create_repo_test.spec.js:79:1 › Create repo test 3 (7.5s)
2023-10-29T17:09:19.420Z error: Request error: AxiosError: Request failed with status code 422 [Login demo test 1] (C:\Users\16san\tests\tests)
2023-10-29T17:09:19.420Z error: Create repo test 3 failed [Create repo test 3] (C:\Users\16san\tests\tests)


  1) create_repo_test.spec.js:79:1 › Create repo test 3 ────────────────────────────────────────────

    AxiosError: Request failed with status code 422

        at settle (C:\Users\16san\node_modules\axios\lib\core\settle.js:19:12)
        at IncomingMessage.handleStreamEnd (C:\Users\16san\node_modules\axios\lib\adapters\http.js:585:11)

  Slow test file: create_repo_test.spec.js (35.4s)
  Consider splitting slow test files to speed up parallel execution
  1 failed
    create_repo_test.spec.js:79:1 › Create repo test 3 ─────────────────────────────────────────────
  2 passed (36.4s)
PS C:\Users\16san\tests> 